--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cargar Archivo</title>
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1>Cargar Archivo CSV</h1>
-    <form action="/predecir" method="POST" enctype="multipart/form-data">
-        <label for="archivo">Selecciona un archivo CSV:</label>
-        <input type="file" name="archivo" id="archivo" required>
-        <button type="submit">Predecir</button>
-    </form>
+    <header>
+        <h1>Predicción de Candidatos</h1>
+    </header>
+    <div class="container">
+        <h2>Cargar Archivo CSV</h2>
+        <form action="/predecir" method="POST" enctype="multipart/form-data">
+            <label for="archivo">Selecciona un archivo CSV:</label>
+            <input type="file" name="archivo" id="archivo" required>
+            <button type="submit">Predecir</button>
+        </form>
+    </div>
 </body>
 </html>
