--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cargar Archivo</title>
+    <title>Cargar candidatos</title>
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Predicción de Candidatos</h1>
+        <h1>Predicción de Candidatos RRHH</h1>
     </header>
     <div class="container">
-        <h2>Cargar Archivo CSV</h2>
+        <h2>Cargar Archivo CSV de los posibles candidatos📚</h2>
         <form action="/predecir" method="POST" enctype="multipart/form-data">
             <label for="archivo">Selecciona un archivo CSV:</label>
             <input type="file" name="archivo" id="archivo" required>
